[package]
name = "redis"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
